--- a/public/index.html
+++ b/public/index.html
@@ -24,28 +24,41 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
+      body { 
+        background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; 
+      }
+      #message {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+      }
+      #benchmarks {
+        padding-top: 3%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+      }
+      .benchmarkButton {
+        padding: 1%;
+        font-size: 24px;
+        margin-bottom: 1%;
       }
     </style>
   </head>
   <body>
     <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+      <h1>Twin</h1>
+      <h2>by Tian Brown, Brant Eckert & Zhen Yi Pan</h2>
+      <h4>CSE 380 Spring 2021 - Professor Richard McKenna</h4>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <div id="benchmarks">
+      <button class="benchmarkButton" onclick="window.location.href='/benchmark1.html';">View Benchmark 1 Page</button>
+      <button class="benchmarkButton" onclick="window.location.href='/benchmark2.html';">View Benchmark 2 Page</button>
+      <button class="benchmarkButton" onclick="window.location.href='/benchmark3.html';">View Benchmark 3 Page</button>
+      <button class="benchmarkButton" onclick="window.location.href='/benchmark4.html';">View Benchmark 4 Page</button>
+    </div>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
