--- a/public/benchmark1.html
+++ b/public/benchmark1.html
@@ -61,7 +61,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="benchmark1.html">Benchmark 1</a>
               <a class="dropdown-item" href="benchmark2.html">Benchmark 2</a>
-              <a class="dropdown-item" href="benchmark3html">Benchmark 3</a>
+              <a class="dropdown-item" href="benchmark3.html">Benchmark 3</a>
             </div>
           </li>
         </ul>
