--- a/public/benchmark4.html
+++ b/public/benchmark4.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 
-<style>
+<!-- <style>
   #body {
     display: flex;
     justify-content: center;
@@ -8,14 +8,14 @@
     font-weight: bold;
     font-size: 32px;
   }
-</style>
+</style> -->
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Twin: Benchmark 4</title>
-</head>
-<body id="body">
-  Coming Soon!
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Twin: Benchmark 4</title>
+  </head>
+  <body id="body">
+    Coming Soon!
+  </body>
 </html>
