--- a/public/benchmark1.html
+++ b/public/benchmark1.html
@@ -14,7 +14,7 @@
       name="keywords"
       content="Tian Brown, Brant Eckert, Zhen Yi Pan, CSE 380, Game Development, Twin, Stony Brook University"
     />
-    <title>Twin: Benchmark 1</title>
+    <title>Twin: Benchmark 1 (Game Design Document)</title>
 
     <!--Stylesheets-->
     <link
