uncaught type error fix

--- a/public/index.html
+++ b/public/index.html
@@ -160,8 +160,10 @@
           )}`;
         } catch (e) {
           console.error(e);
-          loadEl.textContent =
-            "Error loading the Firebase SDK, check the console.";
+          if (loadEl) {
+            loadEl.textContent =
+              "Error loading the Firebase SDK, check the console.";
+          }
         }
       });
     </script>
