renamed hw4_assets to assets

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
       }
 
       @font-face {
-        font-family: 'NoPixel';
-        src: url('hw4_assets/fonts/NoPixel.ttf');
+        font-family: "NoPixel";
+        src: url("assets/fonts/NoPixel.ttf");
       }
     </style>
   </head>
@@ -61,8 +61,7 @@
       <!-- This contains stats about the game for development purposes, such as the average update time -->
       <div id="stats" hidden>
         <canvas id="stats-canvas"></canvas>
-        <select name="Display" id="chart-option">
-        </select>
+        <select name="Display" id="chart-option"></select>
         <div id="stats-display"></div>
       </div>
     </div>
