Spice up main menu GUI with fonts

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
       }
 
       @font-face {
-        font-family: 'NoPixel';
-        src: url('assets/fonts/NoPixel.ttf');
+        font-family: 'Squarely';
+        src: url('assets/fonts/Squarely.ttf');
       }
     </style>
   </head>
