--- a/public/benchmark2.html
+++ b/public/benchmark2.html
@@ -85,13 +85,13 @@
       </div>
 
       <h2 class="mt-4">Coming Soon!</h2>
-      <!-- <iframe
+      <iframe
         src="../benchmark2/dist"
         title="description"
         width="100%"
         height="800"
         scrolling="no"
-      ></iframe> -->
+      ></iframe>
     </div>
 
     <br /><br />
