--- a/public/benchmark2.html
+++ b/public/benchmark2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Tian Brown, Brant Eckert, and Zhen Yi Pan" />
+    <meta name="author" content="Zhen Yi Pan, Tian Brown, and Brant Eckert" />
     <meta
       name="description"
-      content="Twin Game created by Tian Brown, Brant Eckert, and Zhen Yi Pan for CSE 380 (Spring 2021) at Stony Brook University."
+      content="Twin Game created by Zhen Yi Pan, Tian Brown, and Brant Eckert for CSE 380 (Spring 2021) at Stony Brook University."
     />
     <meta
       name="keywords"
-      content="Tian Brown, Brant Eckert, Zhen Yi Pan, CSE 380, Game Development, Twin, Stony Brook University"
+      content="Zhen Yi Pan, Tian Brown, Brant Eckert, CSE 380, Game Development, Twin, Stony Brook University"
     />
     <title>Twin: Benchmark 2 (Core Gameplay)</title>
 
@@ -99,7 +99,7 @@
     <footer class="footer">
       <div class="container">
         <span class="text-muted"
-          >&copy; 2021 Tian Brown, Brant Eckert, and Zhen Yi Pan</span
+          >&copy; 2021 Zhen Yi Pan, Tian Brown, and Brant Eckert</span
         >
       </div>
     </footer>
