Test commit of benchmark 3

--- a/public/benchmark3.html
+++ b/public/benchmark3.html
@@ -81,10 +81,20 @@
       <div class="head">
         <h1>Gameplay Refinement & Audio</h1>
         <h4 class="lead">Benchmark 3</h4>
+        NOTE: We are using a "template tileset" to continue testing new features until all of the map art is completed.
+        <br>
+        If you would like to see our more finished art, check out the file dist/assets/tilemaps/Twin-Tilemap.png.
         <hr />
       </div>
 
-      <h2 class="mt-4">Coming Soon!</h2>
+      <!-- <iframe
+        src="../benchmark3/dist"
+        title="description"
+        width="100%"
+        height="800"
+        scrolling="no"
+      ></iframe> -->
+      
     </div>
 
     <br /><br />
