--- a/public/benchmark3.html
+++ b/public/benchmark3.html
@@ -87,14 +87,14 @@
         <hr />
       </div>
 
-      <!-- <iframe
+      <iframe
         src="../benchmark3/dist"
         title="description"
         width="100%"
         height="800"
         scrolling="no"
-      ></iframe> -->
-      
+      ></iframe>
+
     </div>
 
     <br /><br />
