--- a/public/zhendev.html
+++ b/public/zhendev.html
@@ -70,7 +70,7 @@
     <!--Content-->
     <div class="content container">
       <div class="head">
-        <h1>Level 1</h1>
+        <h1>Level Test</h1>
         <hr />
       </div>
 
