--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="Zhen Yi Pan, Tian Brown, Brant Eckert, CSE 380, Game Development, Twin, Stony Brook University"
     />
-    <title>Twin: Benchmark 3 (Gameplay Refinement & Audio)</title>
+    <title>Twin</title>
 
     <!--Stylesheets-->
     <link
